src/mf-select.component.scss
.mf-overlay-container {
    pointer-events: none;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    position: fixed;
    z-index: 1000;

    .mf-overlay {
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        opacity: 0;
        position: absolute;
        pointer-events: auto;
        z-index: 1000;
    }
}
.select {
    position: relative;
    color: #444444;
    z-index: 1001;

    .select-selected {
        background: #ffffff;
        border-radius: 5px;
        border: 1px solid #ced4da;
        padding: 10px 15px;
        user-select: none;
        .icons {
            float: right;
            .fa-times {
                margin-right: 10px;
                color: #aaaaaa;
                cursor: pointer;
                &:hover {
                    color: #cccccc;
                }
            }
        }
    }

    &.open .select-selected {
        border-color: #00a126;
    }

    .highlighted {
        font-weight: bold;
        text-decoration: underline;
    }
}

.select-dropdown {
    background: #ffffff;
    border-radius: 5px;
    border: 1px solid #00a126;
    padding: 10px 5px;
    color: #000000;
    margin: 3px 0;
    box-shadow: 0 4px 5px hsla(0, 0%, 0%, 0.15);
    visibility: hidden;
    box-sizing: border-box;
    position: absolute;
    width: 100%;
    z-index: 3;

    &.top {
        bottom: 100%;
    }

    .search-container {
        display: flex;

        input[type="search"] {
            width: 100%;
            padding: 8px 10px;
            box-sizing: border-box;
            border: 1px solid #ced4da;
            outline: 0;
            border-radius: 5px;
            &:focus {
                box-shadow: inset 0 1px 1px hsla(0, 0%, 0%, 0.075), 0px 0px 8px hsla(87, 100%, 32%, 0.6);
                border: 1px solid #00a126;
            }
        }

        button {
            width: 48px;
            margin-left: 5px;
            color: #fff;
            background-color: #007b1d;
            border-color: #006e1a;
            outline: none;
            border: 1px solid transparent;
            border-radius: 0.2rem;
        }

        i {
            align-self: center;
            margin-left: 5px;
            cursor: pointer;
            color: #999999;
            transition: color 150ms ease-in-out;

            &:hover {
                color: hsla(134, 100%, 32%, 0.75);
            }

            &:active {
                color: hsla(134, 100%, 25%, 0.75);
            }
        }
    }


    .option-container {
        margin-top: 5px;
        max-height: 200px;
        overflow-y: auto;

        .option {
            cursor: pointer;
            padding: 2px 7px;
            &.marked {
                background-color: hsla(134, 100%, 32%, 0.75);
                color: white;
            }
            &:hover:not(.marked) {
                background-color: hsla(0, 0%, 0%, 0.15);
            }
        }
    }
}

